fixed spacing issue on new modal

--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -24,7 +24,7 @@
 .confirm-content {
   text-align: center;
   p {
-    margin-top: 30%;
+    margin-top: 100px;
   }
   input {
     width: 75px;
